package Code;

public class Casa {
    
    public final int cor; // 0 = branco, 1 = preto
    public Peca ocupante;

    public Casa(int c){

        cor = c;
        ocupante = null;

    }

}
