@startuml

class Gerenciador {
  +main(String[])
  -salvar(Jogo)
  static debug: boolean
}

class Jogo {
  -jogador: Jogador[]
  -tabuleiro: Tabuleiro
  -pecas: Peca[]
  +iniciar()
  +iniciar(caminho)
  -criaPartida()
  -criaPartida(caminho)
  -partida(ja)
  -recebeJogada(ja)
  -realizaJogada(j)
  +resfreshScreen()
  +registroJogo()
}

class Jogador {
  +nome: String
  +cor: int
  -pecas: Peca[]
  +setPecas(ps)
  +informaJogada()
  +pecasCapturadas()
}

class Tabuleiro {
  +casas: Casa[][]
  +geraCaminho(c)
  +setCasa(y,x,p)
  +setCasa(c,p)
  +getCasa(y,x)
  +getPeca(y,x)
  +casasDoCaminho()
  +desenho()
}

class Casa {
  +cor: int
  +ocupante: Peca
}

class Jogada {
  +autor: Jogador
  +casaInicial: Casa
  +casaFinal: Casa
  +caminho: Caminho
  +ehValida(t)
  +ehXeque()
  +ehXequeMate()
}

class Caminho {
  -lista: Casa[]
  +casaInicial()
  +casaFinal()
  +estaLivre()
}

abstract class Peca {
  +cor: int
  +jogador: Jogador
  +Desenho()
  +movimentoValido()
  +caminho()
}

class Peao
class Torre
class Bispo
class Cavalo
class Rainha
class Rei

Peca <|-- Peao
Peca <|-- Torre
Peca <|-- Bispo
Peca <|-- Cavalo
Peca <|-- Rainha
Peca <|-- Rei

' Relações com agregação, composição e associação
Jogo o-- "2" Jogador : agregação
Jogo *-- Tabuleiro : composição
Jogo o-- "32" Peca : agregação
Jogo ..> Jogada : usa
Tabuleiro *-- "8x8" Casa : composição
Tabuleiro ..> Caminho : usa
Casa o-- Peca : agregação
Jogador o-- "*" Peca : agregação
Jogada --> Jogador : associação
Jogada --> Casa : associação
Jogada *-- Caminho : composição
Caminho o-- "*" Casa : agregação
Peca --> Jogador : associação

@enduml